lib_LTLIBRARIES = libcsploit-common.la
libcsploit_common_la_SOURCES = $(wildcard *.c) $(wildcard *.h)
libcsploit_common_la_LDFLAGS=-version-info 1:0
csploitincludedir = $(includedir)/csploit
csploitinclude_HEADERS = arraylist.h control_messages.h io.h logger.h msgqueue.h\
	sorted_arraylist.h buffer.h control.h file_logger.h list.h message.h \
	sequence.h str_array.h
