lib_LTLIBRARIES = libcsploit-common.la
libcsploit_common_la_SOURCES = arraylist.c arraylist.h buffer.c buffer.h config.h control.c control.h control_messages.h file_logger.c file_logger.h io.c io.h list.c list.h logger.c logger.h message.c message.h msgqueue.c msgqueue.h sequence.c sequence.h sorted_arraylist.c sorted_arraylist.h str_array.c str_array.h
libcsploit_common_la_LDFLAGS=-version-info 1:0
csploitincludedir = $(includedir)/csploit
csploitinclude_HEADERS = arraylist.h buffer.h config.h control.h control_messages.h file_logger.h io.h list.h logger.h message.h msgqueue.h sequence.h sorted_arraylist.h str_array.h
